# configura

./: LICENSE  README.md  config.toml  pyproject.toml
data/configs/: pipeline.yaml  pipeline_extended.yaml
data/dlq/: invalid.jsonl  records_extended_dlq.jsonl  records_invalid_keys_dlq_20251117_031656.jsonl
data/input/: generate_data.py  records.jsonl  records_invalid_keys.jsonl
data/output/: records_extended_output.jsonl  records_output.jsonl
data/schema/: schema_generator.py
docs/: git-branch-rules.md  how-to-json.md  how-to-yaml.md  python-PEP8.md  which-format-to-use.md
src/: main.py
src/configura/: cli.py  constants.py  dynamic_lib.py  dynlib.py  engine.py  io.py  loader.py
src/configura/adapters/: base_adapter.py  csv_adapter.py  json.py  json_adapter.py  jsonl_adapter.py
src/configura/plugins/: drop_fields.py  filter_by_field.py  limit.py  rename_fields.py  set_runtime.py  validate.py
src/data/configs/: pipeline.yaml
src/data/schema/: records_schema.json
tests/: test_filter_by_field.py
