[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "configura"
version = "0.1.0"
description = "Config-driven data processing framework with plugins and adapters."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "pyyaml",
  "jsonschema",
]

[project.urls]
github = "https://github.com/R3MISZ/configura"

[project.scripts]
configura = "configura.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-vv --disable-warnings"
testpaths = ["tests"]